--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up ROS 2 Humble
-      uses: ros-tooling/setup-ros@main
+      uses: ros-tooling/setup-ros@v0.5.0
       with:
         distribution: humble
 
