--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Install empy
+      run: |
+        pip install empy
+
     - name: Set up ROS 2 Humble
       uses: ros-tooling/setup-ros@v0.7
       with:
