--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Uninstall conflicting 'em' package
+      run: |
+        pip uninstall -y em
+
     - name: Install empy
       run: |
         pip install empy
 
     - name: Set up ROS 2 Humble
-      uses: ros-tooling/setup-ros@v0.7
+      uses: ros-tooling/setup-ros@v0.7.1
       with:
         distribution: humble
 
@@ -27,7 +31,6 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y python3-colcon-common-extensions python3-pip
-        pip3 install -U empy
 
     - name: Install package dependencies
       run: |
