--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,19 +22,16 @@ jobs:
       run: |
         pip install empy
 
-    - name: Set up ROS 2 Humble
-      uses: ros-tooling/setup-ros@v0.2
-      with:
-        distribution: humble
+    - name: Set up ROS 2 Humble repository
+      run: |
+        sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key F42ED6FBAB17C654
+        sudo sh -c 'echo "deb [arch=amd64] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros2-latest.list'
+        sudo apt-get update -q
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
+        sudo apt-get update -q
         sudo apt-get install -y python3-colcon-common-extensions python3-pip
-
-    - name: Install package dependencies
-      run: |
-        sudo apt-get update
         sudo apt-get install -y \
           ros-humble-rclcpp \
           ros-humble-std-msgs \
