--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: Run ROS CI
       uses: ros-tooling/action-ros-ci@0.3.5
+      with:
+        target-ros2-distro: humble
 
     - name: Install dependencies
       run: |
