--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,11 @@ jobs:
           ros-humble-std-msgs \
           ros-humble-ament-cmake \
           ros-humble-ament-lint-auto \
-          ros-humble-ament-cmake-gtest
+          ros-humble-ament-cmake-gtest#
+
+    - name: Clean build and install directories
+      run: |
+        rm -rf build install log
 
     - name: Build the workspace
       run: |
